--- a/style.css
+++ b/style.css
@@ -1,57 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
-
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+.bi::before {
+    display: inline-block;
+    content: "";
+    vertical-align: -.125em;
+    background-image: url("data:image/svg+xml,<svg viewBox='0 0 16 16' fill='%23333' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' d='M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z' clip-rule='evenodd'/></svg>");
+    background-repeat: no-repeat;
+    background-size: 1rem 1rem;
+  }
 *{
-    margin:0;
+    margin: 0;
     padding: 0;
 }
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: aliceblue;
-}
-header{
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    background-color: #E4363B;
-}
 
-.logo{
-    margin: 10px;
-    height: 171px;  
+body{
+    background-color: white;
+
 }
-footer{
-    background-color: #E4363B;
-    height: 141px;
-    text-align: center;
-    width: 100%;
-    margin-top: 20px;
-}
-.imagem{
-    width: 508px;
-    height: 600px;
-    margin: 0 50%;
-}
-.missao{
-    font-size: 20px;
-    margin: 30px;
-    text-align: justify;
-}
-.missao p{
-    margin: 20px 0;
-}
-ul li{
-    display: inline-block;
-	text-align: center;
-	width: 30%;
-	vertical-align: top;
-	margin: 0 1.5%;
-	padding: 30px 20px;
-	box-sizing: border-box;
-	border-radius: 10px;
-}
-.botao_login {
+li{
     text-decoration: none;
-    font-size: 30px;
-    color: #E4363B;
-    background-color: black;
-    border-radius: 10px;
-    margin: 5px; 
 }
